# vs-code-theme-maker

./: .gitignore  all.txt  drafts.py  new.txt  readme  requierments.txt  settings.json
python/: main.py
source/: main.py
vscode-theme-maker/: pyproject.toml
vscode-theme-maker/vscode_theme_maker/: main.py
