[tool.poetry]
name = "vscode-theme-maker"
version = "0.0.1"
description = ""
authors = ["duck-coder404 <bassam.gamal.lam3y@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
